--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "express-validator": "^6.5.0"
+    "express-validator": "^6.5.0",
+    "html": "^1.0.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
