--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
