--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@google/markerclustererplus": "^5.0.4",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "ejs": "^2.7.4",
